# bioimitation-gym

./: .gitignore  README.md  _config.yml  index.md  installation.md  setup.py
bioimitation/: __init__.py
bioimitation/imitation_envs/: __init__.py  rllib_muscle_imitation_env.py
bioimitation/imitation_envs/data/: README.md
bioimitation/imitation_envs/data/02761/: LICENSE
bioimitation/imitation_envs/data/02761/02761_POST/: README.md
bioimitation/imitation_envs/data/02761/02761_PRE/: README.md
bioimitation/imitation_envs/data/02761/c3d/: 02761_04391_20170508-GBNNN-VDEF-QMAN-01.C3D  02761_04391_20170508-GBNNN-VDEF-QMAN-04.C3D  02761_04391_20170508-GBNNN-VDEF-QMAN-05.C3D  02761_04391_20170508-GBNNN-VDEF-QMAN-08.C3D  02761_04391_20170508-GBNNN-VDEF-QMAN-10.C3D  02761_04722_20180911-GBNNN-VDEF-QMAN-01.C3D  02761_04722_20180911-GBNNN-VDEF-QMAN-05.C3D  02761_04722_20180911-GBNNN-VDEF-QMAN-06.C3D  02761_04722_20180911-GBNNN-VDEF-QMAN-07.C3D  02761_04722_20180911-GBNNN-VDEF-QMAN-08.C3D  (+1 more)
bioimitation/imitation_envs/data/2D/: README.md
bioimitation/imitation_envs/data/3D/: README.md
bioimitation/imitation_envs/inverse_dynamics/: CMakeLists.txt  README.md  inverse_dynamics.cpp
bioimitation/imitation_envs/utils/: opensim_environment.py  opensim_utils.py  opensim_wrapper.py  visualization_utils2D.py  visualization_utils3D.py
bioimitation/imitation_envs/visualization/: visualize_kinematics2D.py  visualize_kinematics3D.py
bioimitation/learning_algorithm/: evaluation.py
bioimitation/learning_algorithm/agents/: __init__.py
bioimitation/learning_algorithm/agents/sac/: actor.py  critic.py  sac_learner.py  temperature.py
bioimitation/learning_algorithm/datasets/: __init__.py  replay_buffer.py
bioimitation/learning_algorithm/networks/: critic_net.py  policies.py
configs/: baseline_train_default.py  env_default.py  test_default.py  train_default.py
scripts/: build_opensim-core  requirements.txt
tests/: example_position_control.py  sample_baselines_training.py  sample_rllib_testing.py  sample_rllib_training.py  test_env.py
(+104 files in other folders)
